# employee-management-system

./: .gitignore  DEVELOPER_ATTRIBUTION.md  EXPORT_FEATURE.md  QUICKSTART.md  README.md  docker-compose.yml
database/: schema.sql  seed.sql
rust_api/: .dockerignore  .gitignore  Cargo.toml  Dockerfile
rust_api/src/: db.rs  main.rs  models.rs
rust_api/src/routes/: auth.rs  employee.rs  history.rs  mod.rs  payslip.rs
streamlit_app/: .dockerignore  Dockerfile  app.py  requirements.txt
streamlit_app/pages/: add_employee.py  dashboard.py  employee_detail.py  export_data.py  login.py
streamlit_app/utils/: api_client.py  auth.py  credit_lock.py  export_utils.py  footer.py
